...
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnPrev"
            style="@style/NavigationButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_chevron_left_black_24dp"
            android:text="@string/previous"/>
...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sample_step_counter"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btnNext"
            style="@style/NavigationButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
            android:text="@string/next"/>
...
